--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,19 +1,6 @@
 <h1>新規登録</h1>
 
-<%= form_for(@reports) do |f| %>
-  <div>
-    <%= f.label :note %>
-    <%= f.text_field :note %>
-  </div>
-  <div>
-    <%= f.label :area_code %>
-    <%= f.text_field :area_code %>
-  </div>
-
-  <div>
-    <%= f.submit %>
-  </div>
-<% end %>
+<%= render partial: 'form', locals: {report: @report} %>
 
 <%= link_to '戻る', reports_path %>
 
